--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -3,6 +3,10 @@
 - **TikTok Server Link**: Added `tiktok` command and server link
 - **Disabling Commands**: Now it is possible to toggle every command individually in `commands.json`
 
+== v3.0.1
+
+- **1.21.3 Support**
+
 == v3.0.0
 
 This release brings a host of exciting new features and enhancements:
