[ci skip] Bump version to 3.1.1
Added welcome message for new players
Resolve placeholders like prefix and suffix in connection messages

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,3 +1,8 @@
+== v3.1.1
+
+- **Welcome message**: Added welcome message for new players
+- **Chat placeholders**: Resolve placeholders like prefix and suffix in connection messages
+
 == v3.1.0
 
 - **TikTok Server Link**: Added `tiktok` command and server link
