[ci skip] Update version to 3.1.2 and document command fix
Bumped project version to 3.1.2 in build configuration. Added CHANGELOG entry for the fixed `/time set` command syntax issue.

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,3 +1,7 @@
+== v3.1.2
+
+- **Fix /time set command**: Fixed /time set command syntax
+
 == v3.1.1
 
 - **Welcome message**: Added welcome message for new players
