--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,3 +1,7 @@
+== v3.1.3
+
+- **Data components**: switched from using item meta to data components (also fixes /repair creating unstackable items)
+
 == v3.1.2
 
 - **Fix /time set command**: Fixed /time set command syntax
