--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,3 +1,7 @@
+== v3.1.4
+
+- **Fix /broadcast command**: Fixed /broadcast command to be usable by non-player command senders
+
 == v3.1.3
 
 - **Data components**: switched from using item meta to data components (also fixes /repair creating unstackable items)
