[ci skip] Release version 3.1.5 with new features and bug fixes
Update changelog and version number to 3.1.5. Added a new /trash command, a teleport cooldown bypass permission, and fixed a critical spawn bug that caused server inaccessibility.

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,3 +1,9 @@
+== 3.1.5
+
+- **Added /trash command**: Added a simple /trash command
+- **Add cooldown bypass permission**: Added permission `tweaks.teleport.cooldown.bypass` to bypass teleport cooldowns
+- **Fixed spawn bug**: Invalid spawn worlds will no longer cause errors and make the server inaccessible
+
 == v3.1.4
 
 - **Fix /broadcast command**: Fixed /broadcast command to be usable by non-player command senders
