--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,3 +1,8 @@
+== 3.1.7
+
+- **Removed "world not affected":** The "world affected" logic was misleading and flawed
+- **Improved internationalization**: some translations weren't properly configurable before
+
 == 3.1.6
 
 - **Fixed config bug:** Previously the mushroom stew cooldown config wasn't respected
