--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -1,3 +1,7 @@
+== 3.1.8
+
+- **1.21.5 support**
+
 == 3.1.7
 
 - **Removed "world not affected":** The "world affected" logic was misleading and flawed
